--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/dariomtz/netflix-clone#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^17.4.0"
+    "joi": "^17.4.0",
+    "shortid": "^2.2.16"
   }
 }
