--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react-app": "^3.1.2",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "mongodb": "^3.6.6",
     "shortid": "^2.2.16"
   }
 }
